# LlamaDroid

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: llama-android.cpp
app/src/main/java/me/gulya/llamadroid/: LlamaDroidApp.kt  MainActivity.kt
app/src/main/java/me/gulya/llamadroid/di/: AppComponent.kt  AppScope.kt
app/src/main/java/me/gulya/llamadroid/download/: DownloadScreen.kt  LlmModel.kt  LlmModelDownloadStore.kt  LlmModelDownloadStoreFactory.kt  LlmModelsListStore.kt  LlmModelsListStoreFactory.kt  LlmScreenComponent.kt
app/src/main/java/me/gulya/llamadroid/llama/: Llm.kt
app/src/main/java/me/gulya/llamadroid/llm/: LlmStore.kt  LlmStoreFactory.kt
app/src/main/java/me/gulya/llamadroid/modelinfo/: ModelInfoComponent.kt
app/src/main/java/me/gulya/llamadroid/newchat/: NewChatComponent.kt
app/src/main/java/me/gulya/llamadroid/root/: RootComponent.kt
app/src/main/java/me/gulya/llamadroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/me/gulya/llamadroid/util/: asValue.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
